--- a/src/css/estilo.css
+++ b/src/css/estilo.css
@@ -1,8 +1,8 @@
 :root {
     --cor-fundo-escuro: #111111;
-    --cor-fundo-escuro-claro: 1C1C1C;
+    --cor-fundo-escuro-claro: #1C1C1C;
     --cor-fundo: #B4B4B4; 
-    --cor-fundo: #f0f0f0; 
+    --cor-fundo-claro: #f0f0f0; 
 
     --cor-verde-claro: #ADDE96;
     --cor-laranja-claro: #EC9440;
@@ -11,128 +11,9 @@
 
   }
 
-header {
-    background-color: rgb(255, 227, 190);
+body {
+    background-color: var(--cor-fundo);
 }
-
-nav {
-    display: flex;
-    flex-direction:row;
-    justify-content: space-between;
-    align-items: center;
-    color: rgb(255, 255, 255);
-
-    background-color: var(--cor-fundo-escuro);
-}
-
-nav img {
-    height: 80px;
-}
-
-nav > div, nav > ul {
-    background-color: rgba(151, 241, 241, 0);
-}
-
-nav > div, nav > ul {
-    display: flex;
-    width: 250px;
-    justify-content: center;
-    align-items: center;
-}
-
-nav li {
-    letter-spacing: 3px;
-    margin-right: 2.5em;
-}
-
-#login {
-    letter-spacing: 3px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;    
-}
-#login > img {
-    width: 15%;
-    height: 15%;
-    padding: 5px;
-}
-
-div#imagem-sushi {
-    display: block;
-    width: 100%;
-    height: 250px;
-    background-image: url(../imagens/frutos-do-mar.png);
-    filter: blur(1.5px);
-    margin: -1.5px;
-    
-
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-main {
-    background-color: aquamarine;
-}
-
-#principais-opcoes {
-    background-color: #B4B4B4;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 150px;
-    justify-content: center;
-    align-items: center;
-    padding: 100px 0px 100px 0px;
-}
-
-#principais-opcoes #reserva, #principais-opcoes #delivery{
-    width: 590px;
-    height: 300px;
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    border-radius: 20px;
-    margin: auto 0;
-    
-}
-
-#reserva {
-    background-image: url(../imagens/imagem-e-sombra-reserva.png);
-
-}
-#delivery {
-    background-image: url(../imagens/imagem-e-sombra-delivery.png);
-
-}
-
-
-.conteudo {
-    padding: 30px 30px 30px 40px;
-    position: relative;
-}
-
-
-.conteudo h3 {
-    font-size: 1.2rem;
-}
-
-#reserva .conteudo h3 {color: var(--cor-laranja-claro);}
-#delivery .conteudo h3 {color: var(--cor-verde-claro);}
-
-.conteudo h1 {
-    color: white;
-    font-size: 3.5em;
-}
-.conteudo p {
-    color: white;
-    width: 249px;
-    font-size: 1.2rem;
-    margin: 13px 0px 27px 0px;
-}
-#delivery p {width: 200px;}
-
 
 button {
     transition: 0.5s;
@@ -141,34 +22,4 @@ button {
 button:hover {
     cursor: pointer;
     transform: scale(1.15);
-}
-.conteudo a {
-    text-decoration: none;
-    font-size: 1.25em;
-    letter-spacing: 2px;
-    color: white;
-}
-.conteudo button {
-    border: none;
-    padding: 8px 25px;
-    border-radius: 11px;
-    box-shadow: 3px 4px 5px rgba(0, 0, 0, 0.336);
-}
-
-#reserva .conteudo button {background-color: var(--cor-laranja-claro);}
-#delivery .conteudo button {background-color: var(--cor-verde-claro);}
-
-
-
-
-
-
-
-
-
-
-
-
-footer {
-    background-color: rgb(206, 169, 255);
 }
