--- a/src/pages/cadastro/src/css/estilo-cadastro.css
+++ b/src/pages/cadastro/src/css/estilo-cadastro.css
@@ -15,6 +15,7 @@ nav img {
 
 
 main h1 {
+    font-weight: 800;
     text-align: center;
     padding: 1.7em;
     letter-spacing: 12px;
@@ -54,6 +55,7 @@ form{
 
 
 .inputs-cadastro {
+    padding: 5px 5px 5px 0px;
     margin: 20px;
     border: none;
     border-bottom: 1px solid white;
