--- a/src/pages/login/src/css/estilo-login.css
+++ b/src/pages/login/src/css/estilo-login.css
@@ -1,3 +1,148 @@
 body {
     background-image: url(../imagens/background-cadastro.png);
 }
+
+
+header {
+    background-color: #111111;
+    align-items: center;
+    text-align: center;
+    border-radius: 0px 0px 50px 50px;
+}
+header h1 {
+    padding: 5px 0px 5px 0px;
+}
+
+nav img {
+    height: 80px;
+}
+
+
+
+main h1 {
+    font-weight: 800;
+    text-align: center;
+    padding: 1.7em;
+    letter-spacing: 12px;
+}
+
+
+
+body {
+    color: white;
+    background-color: rgb(0, 0, 0);
+    background-image: url(../imagens/background-cadastro.png);
+    background-position: center left;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+}
+
+#principal {
+    margin: auto;
+    width: 35vw;
+    background-color: #1C1C1C;
+    border-radius: 20px;
+}
+
+#login-geral {
+    padding: 40px 0px 40px 0px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 20px 20px 0px 0px;
+}
+
+form{
+    text-align: center;
+}
+
+
+.inputs-login {
+    padding: 5px 5px 5px 0px;
+    margin: 20px;
+    border: none;
+    border-bottom: 1px solid white;
+    background-color: rgba(0, 0, 0, 0);
+    color: white;
+    font-size: 24px;
+}
+
+.inputs-login:focus {
+    outline: none;
+}
+
+#login-email {
+    margin-top: 100px;
+}
+
+#login-senha {
+    margin-bottom: 100px;
+}
+
+form button {
+    display: inline-block;
+    font-size: 16px;
+    font-weight: 600;
+    margin: 60px 60px 150px 60px;
+    padding: 8px 35px 8px 35px;
+    border-radius: 5px;
+    border: none;
+    background-color: #FFF6CB;
+    box-shadow: 4px 4px 5px rgba(0, 0, 0, 0.459);
+    cursor: pointer;
+    transition: 0.5s;
+}
+
+form button:hover {
+    transform: scale(1.1);
+}
+
+#principal p {
+    padding: 15px 50px 15px 15px;
+    text-align: right;
+}
+
+#principal p a {
+    font-weight: 600;
+    margin: 0px 0px 0px 10px;
+    color: #EC9440;
+    text-decoration: none;
+    transition: 0.5s;
+}
+
+#principal p a:hover {
+    transform: scale(1.15);
+}
+
+a {
+    text-decoration: none;
+    display: inline-block;
+    color: white;
+}
+
+
+footer {
+    text-align: right;
+    margin: auto;
+    width: 90vw;
+    
+}
+
+footer nav {
+    padding: 10px;
+    border-bottom: 1px solid white;
+}
+
+footer span {
+    margin: 15px;
+}
+
+footer a {
+    transition: 0.1s;
+}
+
+footer a:hover {
+    transform: scale(1.05);
+}
