--- a/src/css/estilo-header.css
+++ b/src/css/estilo-header.css
@@ -8,6 +8,7 @@ nav {
     justify-content: space-between;
     align-items: center;
     color: rgb(255, 255, 255);
+    padding: 10px;
 
     background-color: var(--cor-fundo-escuro);
 }
