change in buttons

--- a/src/css/estilo-main-cardapio.css
+++ b/src/css/estilo-main-cardapio.css
@@ -34,9 +34,9 @@
 
 .conteudo-cardapio a {
     text-decoration: none;
-    
 }
 #botao-cardapio{
+    font-weight: 600;
     font-size: 1em;
     letter-spacing: 2px;
     color: rgb(255, 255, 255);
